--- a/Homework/10-19-press-release/good/index.html
+++ b/Homework/10-19-press-release/good/index.html
@@ -14,8 +14,8 @@
   </div>
 <h1> General Assembly offers Classes and Workshops Worldwide </h1>
 
-General Assembly, which started in New York as a startup incubator, now offers classes and workshops in technology, design, 
-<br>and entrepreneurship, with campuses around the world in:
+<p>General Assembly, which started in New York as a startup incubator, now offers classes and workshops in technology, design, 
+<br>and entrepreneurship, with campuses around the world in:</p>
 
 <ul>
   <li>Atlanta
