--- a/Homework/relaxr/index.html
+++ b/Homework/relaxr/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
@@ -10,17 +9,80 @@
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600,800" rel="stylesheet">
 
 	</head>
 	<body>
-		<div id="container">
-			<header>
-				<h1>Blank Template</h1>
-				<h2>Just another blank template</h2>
-			</header>
+		<div class="container">
+        <header>
+          <h1>Relaxr</h1>
+				  <h2>Get piece of mind with a single tap</h2>
+          <button class="button1" href="#">Get it Now</button>
+      	</header>
+      <main>
+        <div class= "benefits">
+          <div class="benefits-text"
+          <h3>Benefits</h3>
+          <p>
+            The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.
+          </p>
+          <ul>
+            <li>
+              Schedule meetings for you
+            </li>
+            <li>
+              Excel automation to complete your work for you
+            </li>
+            <li>
+              Responds to emails on your behalf
+            </li>
+            <li>
+              Does all your work for you with our revolutionary AI technology
+            </li>
+          </ul>
+        </p>
+        </div> 
+<!--         Benefits-text -->
+    </div>
+<!--     Benefits -->
+    <div class= "quotes">
+      <div class= "quotes-text">
+        <p>
+          “Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.”
+        <br>
+          <span>— Amanda, Intuit</span>
+        </p>
+      </div>
+<!--       quotes-text -->
+    </div>
+<!--     quotes -->
+    <div class= "sign-up-now"
+      <div class= "sign-up-now-text">
+        <button class="button2" href="#">Sign Up Now!</button>
+      </div>
+<!--         sign-up-now-text -->
+    </div>
+<!--       sign-up-now -->
+      </main>
 			<footer>
-				&copy; Footer Goes Here
+        <div class= "footer-copy">
+          <h4>Relaxr</h4>
+          <div class="social-logos">
+            <a href=  "https://twitter.com/">
+              <img class= "twitter" src= "http://res.cloudinary.com/jkeohan/image/upload/v1509050288/twitter_zkx8xu.png">
+            </a>
+            <a href= "https://facebook.com">
+              <img class= "facebook" src= "http://res.cloudinary.com/jkeohan/image/upload/v1509050265/facebook_qgtd3u.png">
+            </a>
+
+          </div>
+<!--             .social-logos -->
+          <p>
+            Copyright 2015. Relaxr.
+          </p>
+        </div>
+<!--           footer-copy -->
 			</footer>
-		</div><!-- #container -->
+    </div><!-- #container -->
 	</body>
 </html>
